# denkmit

./: .gitignore  README.md  initialize_denkmit.sh  manage.py  pyproject.toml
config/: flashcard_config.py
data/: article_table.csv  infinitive_verb_table.csv  noun_table.csv  personal_pronoun_table.csv  preposition_table.csv
data_loaders/: load_articles.py  load_models_from_data.py  load_nouns.py  load_nouns_from_anki.py  load_personal_pronouns.py  load_verbs.py
denkmit/: asgi.py  settings.py  urls.py  wsgi.py
experiments/: 01-spacy-rule-based-matching.ipynb
flashcards/: admin.py  card_defaults.py  card_models.py  card_scores.py  cards.py  defaults.py  learn_today_flashcards.py  load_articles.py  load_from_anki.py  load_infinitive_verbs.py  load_infinitive_verbs_from_anki.py  load_models.py  load_nouns.py  load_nouns_from_anki.py  load_personal_pronouns.py  load_prepositions.py  models.py  pos_models.py  revlog_models.py  urls.py  views.py
flashcards/migrations/: 0001_initial.py  0002_auto_20210506_2131.py  0002_verb.py  0003_personalpronoun.py  0003_personalpronoun_revlog.py  0004_auto_20210501_2352.py  0004_auto_20210511_2102.py  0005_auto_20210511_2105.py  0005_noun_noun_en_pl.py  0006_alter_article_article_de.py  0006_auto_20210511_2108.py  0007_alter_article_unique_together.py  0007_delete_personalpronoun_revlog.py  0008_auto_20210502_0048.py  0008_auto_20210511_2217.py  0009_alter_personalpronoun_unique_together.py  0009_personalpronoun_revlog.py  0010_auto_20210502_0118.py  0010_cardscore.py  0011_auto_20210502_0118.py  0011_delete_cardscore.py  (+40 more)
(+4 files in other folders)
