[tool.poetry]
name = "denkmit"
version = "0.1.0"
description = ""
authors = ["Ben Feifke <benfeifke@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
Django = "^3.2"
ipython = "^7.23.0"
pandas = "^1.2.4"
spacy = "^3.0.6"
ankipandas = "^0.3.10"
jupyter = "^1.0.0"
django-dbbackup = "^3.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
